tests/testcases/errors/BCE0086-1.boo
"""
BCE0086-1.boo(7,5): BCE0086: Can't create instance of interface 'IFoo'.
"""
interface IFoo:
	pass
	
f = IFoo()
